# ppxlib

./: .git-blame-ignore-revs  .ocamlformat  .ocamlformat-ignore  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE.md  Makefile  README.md  RELEASING.md  ann.md  appveyor.yml  dune  dune-project  index.html  jbuild-workspace.dev  odoc.css  ppxlib-bench.opam  ppxlib-tools.opam  ppxlib.opam  ppxlib.opam.template
.github/: CODEOWNERS
_html/: index.html
ast/: ast.ml  ast_extensions.ml  ast_helper.ml  ast_helper.mli  ast_helper_lite.ml  ast_helper_lite.mli  docstrings.ml  docstrings.mli  dune  gen-compiler_specifics  import.ml  jbuild  lexer.mll  location_error.ml  location_error.mli  locations.ml  parser0.mly  pprintast.ml  pprintast.mli  ppxlib_ast.ml  syntaxerr.ml  versions.ml  versions.mli  warn.ml
ast/cinaps/: ast_cinaps_helpers.ml  dune
ast/pp/: dune  pp.ml
ast/supported_version/: supported_version.ml
astlib/: ast_407.ml  ast_408.ml  ast_409.ml  ast_410.ml  ast_411.ml  ast_412.ml  ast_413.ml  ast_414.ml  ast_501.ml  ast_502.ml  ast_503.ml  ast_504.ml  ast_505.ml  ast_506.ml  ast_mapper.mli  astlib.ml  clean.ml  clean.mli  config.mli  dune  encoding_502.ml  encoding_503.ml  encoding_503.mli  encoding_504.ml  encoding_504.mli  encoding_505.ml  encoding_505.mli  encoding_506.ml  encoding_506.mli  error.ml  keyword.ml  keyword.mli  legacy_longident.ml  legacy_longident.mli  location.ml  location.mli  longident.ml  longident.mli  longident_504.mli  migrate_402_403.ml  (+44 more)
base/: ast_builder.ml  attribute.ml  attribute.mli  code_matcher.ml  context_free.ml  context_free.mli  driver.mli  extension.ml  import.ml  jbuild  longident.ml  options.ml  ppxlib_base.ml  reconcile.ml
bench/: bench.ml  dune
dev/: README.md  rev-deps.sh
doc/: ast-traversal.mld  compatibility.mld  driver.mld  dune  example-ast-building.mld  example-ast-destructing.mld  example-ast.mld  examples.mld  generating-code.mld  good-practices.mld  index.mld  index.rst  manual.mld  matching-code.mld  ppx-for-end-users.mld  ppx-for-end-users.rst  ppx-for-plugin-authors.mld  ppx-for-plugin-authors.rst  quick_intro.mld  what-is-ppx.mld  what-is-ppx.rst  writing-ppxs.mld
examples/: README.md
metaquot/: dune  jbuild  ppxlib_metaquot.ml
metaquot_lifters/: dune  jbuild  ppxlib_metaquot_lifters.ml
ppxlib/: ast-traversal.html  compatibility.html  driver.html  examples.html  generating-code.html  good-practices.html  index.html  manual.html  matching-code.html  ppxlib.odoc  ppxlib__.odoc  ppxlib__Ast_builder_generated.odoc  ppxlib__Ast_pattern.odoc  ppxlib__Ast_pattern0.odoc  ppxlib__Ast_traverse.odoc  ppxlib__Attribute.odoc  ppxlib__Caller_id.odoc  ppxlib__Deriving.odoc  ppxlib__Driver.odoc  ppxlib__File_path.odoc  ppxlib__Import.odoc  ppxlib__Location.odoc  ppxlib__Merlin_helpers.odoc  ppxlib__Name.odoc  ppxlib__Reconcile.odoc  ppxlib__Spellcheck.odoc  ppxlib__Utils.odoc  quick_intro.html  writing-ppxs.html
ppxlib-bench/: index.html
ppxlib-tools/: index.html
ppxlib.ast/: index-generated.mld  ppxlib_ast.odoc  ppxlib_ast__.odoc  ppxlib_ast__Ast.odoc  ppxlib_ast__Import.odoc  ppxlib_ast__Parser.odoc  ppxlib_ast__Pprintast.odoc  ppxlib_ast__Syntaxerr.odoc
ppxlib.metaquot/: page-index.odoc
ppxlib.metaquot_lifters/: index-generated.mld  index.html  page-index.odoc
ppxlib.print_diff/: index.html
ppxlib.runner/: index-generated.mld  index.html  page-index.odoc  ppxlib_runner.odoc  ppxlib_runner__Ppx_driver_runner.odoc
ppxlib.runner_as_ppx/: index-generated.mld  index.html  page-index.odoc  ppxlib_runner_as_ppx.odoc  ppxlib_runner_as_ppx__Ppx_driver_runner_as_ppx.odoc
ppxlib.traverse/: index.html  ppxlib_traverse.odoc
ppxlib.traverse_builtins/: index.html  page-index.odoc
runner/: jbuild  ppx_driver_runner.ml
runner_as_ppx/: jbuild  ppx_driver_runner_as_ppx.ml
src/: ast_builder.ml  ast_builder.mli  ast_builder_intf.ml  ast_pattern.ml  ast_pattern.mli  ast_traverse.ml  ast_traverse.mli  ast_traverse0.mli  attribute.ml  attribute.mli  caller_id.ml  clean.ml  clean.mli  code_matcher.ml  code_matcher.mli  code_path.ml  code_path.mli  common.ml  common.mli  context_free.ml  context_free.mli  deriving.ml  deriving.mli  driver.ml  driver.mli  dune  expansion_context.ml  expansion_context.mli  expansion_helpers.ml  expansion_helpers.mli  extension.ml  extension.mli  (+33 more)
test/501_migrations/: compare_on.ml  dune  forth_back_migrations.t  normal_migrations.t  one_migration.t  reverse_migrations.ml  reverse_migrations.t
test/502_pexpfun/: check_locations_integrity.ml  dune  run.t
test/ast_builder_value_binding/: dune  test.ml
test/attr_replace/: driver.ml  dune  ppx_attr_replace.ml  run.t  test.ml  test.ml.expected
test/attr_replace/ppx/: dune  ppx_attr_replace.ml  ppxlib_test_attr_replace_ppx.ml
test/deriving/: dune  fail01.expected  fail01.ml  fail02.expected  fail02.ml  jbuild  pass01.expected  pass01.ml  test.ml  test_510.ml
test/deriving/inline/example/: dune  ppx_deriving_example.ml
test/deriving/inline/foo-deriver/: dune  ppx_foo_deriver.ml
test/driver/dune-optional-output/: context_free_only_driver.ml  driver_with_impl.ml  dune  run.t
test/driver/exception_handling/: constant_type.ml  deriver.ml  dune  extender.ml  instrument_after.ml  instrument_before.ml  linter.ml  preprocess.ml  run.t  special_functions.ml  whole_file_exception.ml  whole_file_extension_point.ml  whole_file_located_error.ml  whole_file_multiple_errors.ml
test/driver/manual-transforms-order/: driver_a_first.ml  driver_b_first.ml  dune  exp_to_a.ml  exp_to_b.ml  run.t
test/driver/no-corrections/: dune  ppx_deriving_x.ml  ppx_deriving_y.ml  ppx_gen_stuff.ml  run.t
test/driver/run_as_ppx_rewriter_preserve_version/: dune  print_magic_number.ml
test/driver/run_as_ppx_rewriter_preserve_version/test.t/: 408_binary_ast  run.t
test/driver/transformations/: dune  fail01.expected  fail01.ml  jbuild  pass01.expected  pass01.ml  pass02.expected  pass02.ml  pass03.expected  pass03.ml  test.ml  test_412.ml  test_510.ml
test/metaquot/: dune  pre_max_arity.t  run.t  test.ml  test_510.ml
(+1845 files in other folders)
