(documentation
 (package ppxlib))

(rule
 (alias doc)
 (deps
  (glob_files ./images/*))
 (action
  (progn
   (system "mkdir -p %{project_root}/_doc/_html/ppxlib/assets/images")
   (system "chmod -R a+rw %{project_root}/_doc/_html/ppxlib/assets/images")
   (system
    "cp -R ./images/ %{project_root}/_doc/_html/ppxlib/assets/images/"))))
