(executable
 (name driver)
 (enabled_if
  (>= %{ocaml_version} "5.2"))
 (libraries ppxlib))

(cram
 (package ppxlib)
 (enabled_if
  (>= %{ocaml_version} "5.2"))
 (deps driver.exe))

(rule
 (package ppxlib)
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} "5.2"))
 (deps
  (:test test.ml)
  (package ppxlib))
 (action
  (chdir
   %{project_root}
   (progn
    (run expect-test %{test})
    (diff? %{test} %{test}.corrected)))))
