(executable
 (name driver)
 (libraries ppxlib ppxlib.metaquot))

(cram
 (deps ./driver.exe)
 (enabled_if
  (>= %{ocaml_version} "5.2.0"))
 (package ppxlib))

(rule
 (package ppxlib)
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} "4.14.0"))
 (deps
  (:test test.ml)
  (package ppxlib))
 (action
  (chdir
   %{project_root}
   (progn
    (run expect-test %{test})
    (diff? %{test} %{test}.corrected)))))
