(executables
 (names whole_file_exception whole_file_extension_point
   whole_file_located_error whole_file_multiple_errors extender deriver)
 (libraries ppxlib))

(cram
 (deps extender.exe whole_file_exception.exe whole_file_located_error.exe whole_file_multiple_errors.exe
   deriver.exe whole_file_extension_point.exe))
