(executable
 (name identity_standalone)
 (libraries ppxlib)
 (preprocess
  (pps ppxlib.metaquot))
 (modules identity_standalone))

(executable
 (name print_magic_number)
 (libraries astlib)
 (preprocess
  (pps ppxlib.metaquot))
 (modules print_magic_number))

(cram
 (enabled_if
  (or
   (= %{system} linux)
   (= %{system} linux_elf)
   (= %{system} elf)
   (= %{system} linux_eabihf)
   (= %{system} linux_eabi)))
 (deps identity_standalone.exe print_magic_number.exe))
